syntax = "proto3";
package vessPKG;

service VesselService {
    rpc FindAvailable (Specification) returns (Response) {}
    rpc Create (Vessel) returns (Response) {}
}

message Vessel {
    string id = 1;
    int32 Capacity = 2;
    int32 max_weight = 3;
    string name = 4;
    bool available = 5;
    string ower_id = 6;
}

message Specification {
    int32 capacity = 1;
    int32 max_weight = 2;
}

message Response {
    Vessel vessel = 1;
    repeated Vessel  vessels = 2;
    bool Created = 3;
}

